fix white bar when nav bar collapse expanded

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -32,7 +32,7 @@
     display: block;
     position: absolute;
     left: 0;
-    top: -220px;
+    top: -250px;
     width: 100%;
     height: 150%;
     z-index: -1;
